--- a/course-project/angular.json
+++ b/course-project/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "course-project": {
+    "udemy": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/course-project",
+            "outputPath": "dist/udemy",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -24,7 +24,6 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -63,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "course-project:build"
+            "browserTarget": "udemy:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "course-project:build:production"
+              "browserTarget": "udemy:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "course-project:build"
+            "browserTarget": "udemy:build"
           }
         },
         "test": {
@@ -111,15 +110,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "course-project:serve"
+            "devServerTarget": "udemy:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "course-project:serve:production"
+              "devServerTarget": "udemy:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "course-project"
+  "defaultProject": "udemy"
 }
